添加到主屏幕
添加到主屏幕

--- a/look-and-feel/manifest.json
+++ b/look-and-feel/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Progressive Times web app",
+  "name": "添加到主屏幕",
   "short_name": "Progressive Times",
   "start_url": "./index.html",
   "theme_color": "#FFDF00",
